--- a/Maquetado Individual/styles.css
+++ b/Maquetado Individual/styles.css
@@ -3,6 +3,11 @@
     margin: 0;
 }
 
+body {
+    font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
+}
+
 h1 {
     color: black;
 }
@@ -12,7 +17,7 @@ header {
     position: fixed;
     background-color:#ffffff;
     width: 100%;
-    height: 70px;
+    height: 77px;
     border-style: solid;
     border-width: 3px;
     border-color: black;
@@ -23,21 +28,22 @@ header {
 .logo {
     display: flex;
     background-color: #ffffff;
-    width: 30%;
+    width: 25%;
     height: 100%;
     border-style: solid;
     border-width: 0px 3px 0px 0px;
-    border-color: black;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    font-weight: 300;
-    font-style: normal;
     justify-content: center;
     align-items: center;
 }
 
+.logo-img {
+    text-align: center;
+    width: 155px;
+}
+
 #search {
     background-color: #ffffff;
-    width: 50%;
+    width: 51%;
     height: 100%;
     border: none;
     font-size: 1.125rem;
@@ -49,54 +55,68 @@ header {
     align-items: center;
 }
 
-
 .opciones, .cuenta, .ubicacion, .compras {
     background-color: #ffffff;
-    width: 5%;
+    width: 6%;
     height: 100%;
     border-style: solid;
     border-width: 0px 0px 0px 3px;
     border-color: black;
 }
 
-
-main {
+#imagen-principal{
     background-image: url("https://www.esenzzia.com/modules/ps_imageslider/images/f84a8567c559b194fc58867a27b495da22b8a449_Post%20de%20Instagram%20rebajas%20ofertas%20descuentos%20femenino%20rosa%20(1947%C2%A0%C3%97%C2%A0876%C2%A0px)%20(1).png");
     background-position: center;
+    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 100%;
     width: 100%;
-    height: 80vh;
+    height: 92vh;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    
 }
 
 .rebajas {
-    width: 30%;
-    height: 60px;
+    position: fixed;
+    z-index: 1;
+    width: 350px;
+    height: 70px;
+    cursor: pointer;
+    line-height: 24px;
+    padding: 8px 16px 8px 16px ;
+    text-align: center;
     background-color: black;
     border-style: none;
     color: #ffffff;
-    font-family: Roboto;
+    font-family: 'Roboto';
     font-weight: 700;
-    font-size: 16px;
+    text-transform: uppercase;
+    font-size: 1rem;
     margin: 0px 0px 40px 30px;
+    transition-delay: 0s;
     transition: all .5s ease;
 }
 
 .rebajas:hover {
-    width: 30%;
-    height: 60px;
+    position: fixed;
+    z-index: 1;
+    width: 350px;
+    height: 70px;
+    cursor: pointer;
+    line-height: 24px;
+    padding: 8px 16px 8px 16px ;
+    text-align: center;
     background-color: #ffffff;
-    border-style: none;
     color: black;
+    border-color: black;
     border-style: solid;
     border-width: 3px;
-    border-color: black;
-    font-family: Roboto;
+
+    font-family: 'Roboto';
     font-weight: 700;
-    font-size: 16px;
+    text-transform: uppercase;
+    font-size: 1rem;
 }
 
 .ayuda {
@@ -111,19 +131,33 @@ main {
     border-style: solid;
     border-color: #ffffff;
     color: #ffffff;
-    font-family: Roboto;
+    font-family: 'Roboto';
     font-weight: 700;
     font-size: 16px;
 }
 
 
-section {
+.abajo-imagen {
+    position: relative;
+    z-index: 2;
     background-color:#ffffff;
     width: 100%;
-    height: 80vh;
+    height: 50vh;
     border-style: solid;
     border-width: 3px 0px 0px 0px;
     border-color: black;
 }
 
+.dato-perfumes {
+    z-index: 3;
+    margin-top: 0.5vh;
+    margin-left: 8vh;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    font-weight: 700;
+    line-height: 1.36;
+    font-family: Roboto,Helvetica Neue,Arial,sans-serif;
+    color: #000;
+    text-align: left;
+}
 
