--- a/Maquetado Individual/styles.css
+++ b/Maquetado Individual/styles.css
@@ -53,15 +53,44 @@ header {
     font-size: 16px;
     justify-content: center;
     align-items: center;
+    box-shadow: none;
 }
 
 .opciones, .cuenta, .ubicacion, .compras {
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
     background-color: #ffffff;
     width: 6%;
     height: 100%;
     border-style: solid;
     border-width: 0px 0px 0px 3px;
     border-color: black;
+    fill: #000;
+}
+
+.opciones:hover, .cuenta:hover, .ubicacion:hover, .compras:hover {
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    background-color: #000;
+    width: 6%;
+    height: 100%;
+    border-style: solid;
+    border-width: 0px 0px 0px 3px;
+    border-color: black;
+    color: #ffffff;
+    fill: rgb(255, 255, 255);
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 300,
+    'GRAD' 0,
+    'opsz' 48
 }
 
 #imagen-principal{
@@ -135,7 +164,6 @@ header {
     font-weight: 700;
     font-size: 16px;
 }
-
 
 .abajo-imagen {
     position: relative;
